2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Assign copyright of my work to Openismus GmbH

	* configure.ac: Reassign the copyright which I had assigned to myself
	temporarily to Openismus GmbH instead, as I did the work in my position
	as an employee.
	* *.am: ditto,
	* macros/mm-python.m4: ditto.

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Split Makefile.am into logically separate parts

	* glom.am: New file for building the glom binary itself.
	* libglom.am: New file for building the libglom library.
	* libegg.am: New file for building the libegg static library.
	* tests.am: New file for building the test programs.
	* Makefile.am: Move logical chunks into the separate files listed
	above, and pull them in as Automake include files.

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Invoke gnome-doc-common from autogen.sh

	* autogen.sh: Execute "gnome-doc-common --copy" to install the files
	omf.make and xmldocs.make into the source tree.

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Use G_GSIZE_FORMAT instead of a cast

	* glom/libglom/python_embed/pygdavalue_conversions.c: Change format
	specifier for GType to "%" G_GSIZE_FORMAT and remove the explicit cast
	again.  I forgot that this is C code, so GType will always be gsize --
	at least with recent versions of GLib.

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Use format "%lu" for GType and add cast

	* glom/libglom/python_embed/pygdavalue_conversions.c: Change format
	specifier in g_warning() message back from "%u" to "%lu", and add an
	explicit cast to unsigned long.  Looks like GLib silently changed the
	type of GType from gulong to gsize, except when using a C++ compiler
	with a 64 bit target.  (Yes, really.)

2009-07-24  Daniel Elstner  <danielk@openismus.com>

	Suppress warning for missing field initializers

	* configure.ac (GLOM_WXXFLAGS): Add -Wno-missing-field-initializers to
	the warning options at level max or higher, so that the Python module