@@ -1,3 +1,9 @@
+2009-07-25  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/base_db.cc: get_fields_for_table_from_database(): 
+	Use gda_meta_store_sql_identifier_quote() as mentioned in bug #589607
+	to maybe make this work with uppercase in the table name.
+
 2009-07-24  Daniel Elstner  <danielk@openismus.com>
 
 	Assign copyright of my work to Openismus GmbH
